# setting-backup

cmake/: CMakeLists.txt
cmake/src/: main.cpp  static.cpp
docker-backup/qqbot/: backup.sh  restore.sh
nvim/: README.md  avante教程.txt  init.lua  lazy-lock.json  按键自查.txt
nvim/lua/ai/: ai_gemini_wrapper.py  fidget-codecompanion.lua  roles.md  vim_ai_roles.lua
nvim/lua/ai/prompts/: nextjs-agant.lua
nvim/lua/config/: highlight.lua  keymaps.lua  lazy.lua  options.lua
nvim/lua/custom/: alpha-emma.lua  alpha-header.lua  alpha-mako.lua  alpha-nakuru.lua  alpha-shiro.lua
nvim/lua/llm/: fidget-spinner.lua  setup.lua
nvim/lua/plugins/: alpha.lua  avante.lua  buffer.lua  bufferline.lua  codecompanion.lua  comment.lua  copilot-cmp.lua  copilot.lua  fidget.lua  flash.lua  gruvbox.lua  illuminate.lua  indent-blankline.lua  kakagawa.lua  lsp.lua  lspsaga.lua  lualine.lua  luasnip.lua  mason-lspconfig.lua  mason.lua  noice.lua  nvim-cmp.lua  rainbow.lua  render-markdown.lua  rose-pine.lua  sentiment.lua  telescope.lua  toggleterm.lua  tokyonight.lua  transparent.lua  tree.lua  treesitter.lua  twilight.lua  vim-ai.lua  vim-smoothie.lua  vim-tmux-navigator.lua  zen.lua
oh-my-zsh/: .zshrc  omz.sh
